@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 20-Nov-2009 Andrew Eddie
  ^ Change XML version tags to 1.6.0.
+ # Fixed bug in Tooltip JS code where title attribute not found causes error.
 
 19-Nov-2009 Ron Severdia
 ^ Restored missing CSS
